--- a/data/stories/stories_handoff.yml
+++ b/data/stories/stories_handoff.yml
@@ -1,5 +1,8 @@
 version: "2.0"
 stories:
+#
+# TODO: All of these must be converted still into possible rules...
+#
 - story: handoff
   steps:
   - checkpoint: STORY_START
