--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
   - name: EntitySynonymMapper
-  - name: DucklingHTTPExtractor
+  - name: DucklingEntityExtractor
     url: http://localhost:8000
     dimensions:
     - amount-of-money
